[tool.poetry]
name ="pysparkpipe"
version = "0.1.4"
description = "Flow orchestrator for data transformations within the context of pyspark.sql.GroupedData.applyInPandas"
authors = ["Santiago Armstrong <santiagoarmstrong@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pyspark = ">=3.2.1"
pandas = ">=1.4.3,<2.0.0"
pyarrow = ">=7.0.0"
pandera = "^0.16.1"
typeguard = "^4.1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3,<8.0.0"
autopep8 = "^2.0.2"
docformatter = "^1.7.5"
pylint = "^2.17.5"
flake8 = "^6.1.0"
mypy = "^1.4.1"
isort = "^5.12.0"
bandit = "^1.7.5"
black = "^23.7.0"
pre-commit = "^3.3.3"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.mansonry.api"
